retrait extends ds eslintConfig

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,9 +23,7 @@
     "doc": "jsdoc -c jsdoc.config.json"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app/jest"
-    ]
+    "extends": [ ]
   },
   "browserslist": {
     "production": [
