--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "rechart": "^0.0.1",
     "recharts": "^2.1.13",
     "web-vitals": "^2.1.4"
@@ -23,7 +23,7 @@
     "doc": "jsdoc -c jsdoc.config.json"
   },
   "eslintConfig": {
-    "extends": [ ]
+    "extends": []
   },
   "browserslist": {
     "production": [
@@ -38,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
     "jsdoc": "^3.6.11"
   }
 }
